# inference-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build-image.sh  deny.toml  gpu_evidence_worker.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  security-audit.yml
benches/: e2e.rs  hot_path.rs
examples/: demo_ohttp.rs  test_ohttp.rs
scripts/: bench_live.py  repro_intermittent_auth_401.py  repro_retry_local.py  test_ohttp_chunked.py  test_ohttp_smoke.sh
src/: attestation.rs  auth.rs  backend_pool.rs  cache.rs  config.rs  encryption.rs  error.rs  lib.rs  main.rs  metrics_middleware.rs  ohttp_gateway.rs  proxy.rs  rate_limit.rs  signing.rs  startup_checks.rs  types.rs
src/routes/: attestation.rs  catch_all.rs  chat.rs  completions.rs  health.rs  metrics.rs  mod.rs  ohttp.rs  passthrough.rs  signature.rs
tests/: integration.rs
