[package]
name = "vllm-proxy-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Async runtime & web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
tokio-stream = "0.1"
futures-util = "0.3"
http-body-util = "0.1"

# dstack SDK
dstack-sdk = "0.1.2"

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
x509-parser = "0.16"
sha3 = "0.10"
subtle = "2.5"

# Rate limiting
governor = "0.8"
nonzero_ext = "0.3"

# Cache
moka = { version = "0.12", features = ["sync"] }

# Serialization & utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
percent-encoding = "2"
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
