[package]
name = "vllm-proxy-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Async runtime & web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
tokio-stream = "0.1"
futures-util = "0.3"
http-body-util = "0.1"

# dstack SDK
dstack-sdk = "0.1.2"

# Crypto
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
x509-parser = "0.18"
sha3 = "0.10"
subtle = "2.5"
crypto_box = { version = "0.9", features = ["chacha20"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.13"
ohttp = { version = "0.7", features = ["server", "stream", "rust-hpke"] }
bhttp = "0.7"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# Cache
moka = { version = "0.12", features = ["sync"] }

# Serialization & utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
percent-encoding = "2"
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "hot_path"
harness = false

[[bench]]
name = "e2e"
harness = false
